src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Technological_partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Platform/Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>notEqual</operation>
                <value>Aeonvis</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities as Technological partner</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_costs__c</fullName>
        <label>Total Actual costs</label>
        <summarizedField>BD_Cost_Charge__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>BD_Cost_Charge__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Travel_Costs__c</fullName>
        <label>Travel Actual Costs</label>
        <summarizedField>BD_Cost_Charge__c.Travel_Cost__c</summarizedField>
        <summaryForeignKey>BD_Cost_Charge__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fairu__test_field__c</fullName>
        <label>test field</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>TR_Project_ID__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Order_Amount__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Billing_item_total_amount__c</columns>
        <columns>Billing_item_total_invoiced__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Billin_Plan_Status__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2024 12:00 AM</value>
        </filters>
        <label>Tutte le opportunità</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Luxottica</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Luxottica</value>
        </filters>
        <filters>
            <field>Code__c</field>
            <operation>contains</operation>
            <value>AV21</value>
        </filters>
        <label>Luxottica</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Business_Develoment_Amount__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Opportunità personali</label>
    </listViews>
    <listViews>
        <fullName>NONTOP5_Closing_this_Year</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>FCA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Lux</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Kering Eyewear</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Aquafil</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Agrati</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>NON TOP5 - Closing this Year</label>
    </listViews>
    <listViews>
        <fullName>NTOP5_Closing_this_Q</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>FCA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Lux</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Kering Eyewear</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Aquafil</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Agrati</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>NON TOP5 - Closing this Q</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>TOP5_AGRATI_Closing_this_Q</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Agrati</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>TOP5 - AGRATI - Closing this Q</label>
    </listViews>
    <listViews>
        <fullName>TOP5_FCA_Closing_this_year</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Code__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>FCA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>TOP5 - FCA - Closing this Year</label>
    </listViews>
    <listViews>
        <fullName>TOP_5_FCA_Closing_this_Q</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>FCA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>TOP5 - FCA - Closing this Q</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>Code__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TR_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>EssilorLuxottica</value>
        </filters>
        <filters>
            <field>Project_closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Archived</value>
        </filters>
        <label>EssilorLuxottica</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Code__c</columns>
        <columns>TR_Project_ID__c</columns>
        <columns>Billing_items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>Won_without_Billing_Item</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Code__c</columns>
        <columns>TR_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Billing_items__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Won without Billing Item</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_plan_status_closed_check</fullName>
        <active>false</active>
        <description>Alla chiusura del billing plan dell&apos;opportunity verifica che il totale degli amount dei billing item siano pari all&apos;amount dell&apos;ordine</description>
        <errorConditionFormula>AND (
ISCHANGED(Billin_Plan_Status__c ),
 ISPICKVAL(Billin_Plan_Status__c , &apos;Closed&apos;),
  Billing_item_total_amount__c &lt;&gt; Order_Amount__c,
   NOT(ISPICKVAL( Engagement_Type__c , &apos;T&amp;M&apos;))  
)</errorConditionFormula>
        <errorDisplayField>Billin_Plan_Status__c</errorDisplayField>
        <errorMessage>The billing plan can&apos;t be closed. The total amount of billing items is not equal to the order amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractTypeMandatory</fullName>
        <active>false</active>
        <description>The contract type field is mandatory from the proposal phase onwards</description>
        <errorConditionFormula>AND( ISBLANK(TEXT(Contract_type__c)), OR( ISPICKVAL( StageName , &apos;Proposal&apos;), ISPICKVAL( StageName , &apos;Negotiation&apos;), ISPICKVAL( StageName , &apos;Closed Negotiation&apos;), ISPICKVAL( StageName , &apos;Closed Won&apos;)) )</errorConditionFormula>
        <errorDisplayField>Contract_type__c</errorDisplayField>
        <errorMessage>The contract type field is mandatory from the proposal phase onwards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contracttype_required_with_order</fullName>
        <active>true</active>
        <description>Contract Type is required when order is filled</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( Order_Number__c )),  ISPICKVAL(Contract_type__c ,&quot;&quot;)  )</errorConditionFormula>
        <errorDisplayField>Contract_type__c</errorDisplayField>
        <errorMessage>Contract Type required when order number is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_Campi_Opp_Vinta</fullName>
        <active>false</active>
        <description>Controlla il Contractor: se è Aeonvis controlla i campi sull&apos;Account, altrimenti controlla i campi obbligatori su Contractor.</description>
        <errorConditionFormula>(
Partner__r.Name = &apos;Aeonvis&apos;

&amp;&amp;

OR(ISPICKVAL( StageName , &apos;Closed Won&apos;), ISPICKVAL( StageName , &apos;Closed Negotiation&apos;))

&amp;&amp;

OR(Account.VAT_number__c = &apos;&apos;, Account.Company_name__c = &apos;&apos;, Account.BillingCountry = &apos;&apos;, TR_Project_ID__c = &apos;&apos;, ISPICKVAL( Payment_terms__c , &apos;&apos;),  Account.Codice_SDI__c = &apos;&apos;))



||


(
Partner__r.Name != &apos;Aeonvis&apos;

&amp;&amp;

OR(ISPICKVAL( StageName , &apos;Closed Won&apos;), ISPICKVAL( StageName , &apos;Closed Negotiation&apos;))

&amp;&amp;

OR(Partner__r.VAT_number__c = &apos;&apos;, Partner__r.Company_name__c = &apos;&apos;, Partner__r.BillingCountry = &apos;&apos;, TR_Project_ID__c = &apos;&apos;, ISPICKVAL( Payment_terms__c , &apos;&apos;),  Partner__r.Codice_SDI__c = &apos;&apos;))</errorConditionFormula>
        <errorMessage>Compilare: Dati di Fatturazione (nel caso di Contractor diverso da Aeonvis verificare il Contractor), il TR Project ID, i Termini di Pagamento sull&apos;Opportunità.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Required_With_Revenue</fullName>
        <active>true</active>
        <description>Rende obbligatorio il campo costo quando il campo revenue è compilato</description>
        <errorConditionFormula>AND(  NOT(ISBLANK(Amount)),  ISBLANK(Revenue__c) )</errorConditionFormula>
        <errorDisplayField>Revenue__c</errorDisplayField>
        <errorMessage>Cost required when amount is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Elapsed_required_with_order</fullName>
        <active>true</active>
        <description>Elapsed (months) is required when order is filled</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Order_Number__c )),  ISBLANK( Elapsed__c )  )</errorConditionFormula>
        <errorDisplayField>Elapsed__c</errorDisplayField>
        <errorMessage>Elapsed (months) required when order number is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Engagement_type_required_with_order</fullName>
        <active>true</active>
        <description>Engagement Type is required when order is filled</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( Order_Number__c )),  ISPICKVAL( Engagement_Type__c ,&quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Engagement_Type__c</errorDisplayField>
        <errorMessage>Engagement Type required when order number is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EngagmentTypeMandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK(TEXT( Engagement_Type__c )), OR( ISPICKVAL( StageName , &apos;Proposal&apos;), ISPICKVAL( StageName , &apos;Negotiation&apos;), ISPICKVAL( StageName , &apos;Closed Negotiation&apos;), ISPICKVAL( StageName , &apos;Closed Won&apos;)) )</errorConditionFormula>
        <errorDisplayField>Engagement_Type__c</errorDisplayField>
        <errorMessage>The engagment type field is mandatory from the proposal phase onwards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrderAmount_check_on_insert</fullName>
        <active>false</active>
        <description>All&apos;inserimento dell&apos;order amount, l&apos;order amount deve corrispondere al il totale del billing item (Billing item total amount dell&apos;opportunity)</description>
        <errorConditionFormula>AND(
 ISNULL(PRIORVALUE( Order_Amount__c )),
 ISCHANGED(Order_Amount__c),
 Order_Amount__c &lt;&gt;  Billing_item_total_amount__c 
)</errorConditionFormula>
        <errorDisplayField>Order_Amount__c</errorDisplayField>
        <errorMessage>Billing items total amount is not equal to order amount. Review billing items before insert order amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Fullfilled</fullName>
        <active>false</active>
        <description>Verifica che sia stato fatturato tutto e in caso di quality review che questa sia stata completata</description>
        <errorConditionFormula>IF(
AND(Project_closed__c = TRUE, Quality_review__c = TRUE), OR(Billing_item_total_invoiced__c &lt;&gt; Order_Amount__c, !ISPICKVAL(Quality_review_status__c , &quot;Completed&quot;)),
IF(
AND(Project_closed__c = TRUE, Quality_review__c = FALSE),
Billing_item_total_invoiced__c &lt;&gt; Order_Amount__c, FALSE
    )
)</errorConditionFormula>
        <errorMessage>In case of &quot;Order fullfilled&quot; is checked please check &quot;Billing Total Invoiced&quot; = &quot;Amount&quot; and &quot;Quality Status&quot; is completed (only when Quality review is checked)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Fullfilled_New</fullName>
        <active>true</active>
        <description>Verifica che sia stato fatturato tutto e in caso di quality review che questa sia stata completata</description>
        <errorConditionFormula>IF(
AND(Project_closed__c = TRUE, Quality_review__c = TRUE), OR(Billing_item_total_invoiced__c &lt;&gt; (Order_Amount__c - Billing_item_not_to_be_invoiced__c) , !ISPICKVAL(Quality_review_status__c , &quot;Completed&quot;)),
IF(
AND(Project_closed__c = TRUE, Quality_review__c = FALSE),
Billing_item_total_invoiced__c &lt;&gt; (Order_Amount__c - Billing_item_not_to_be_invoiced__c), FALSE
)
)</errorConditionFormula>
        <errorMessage>In case of &quot;Order fullfilled&quot; is checked please check &quot;Billing Total Invoiced&quot; = &quot;Amount&quot; and &quot;Quality Status&quot; is completed (only when Quality review is checked)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_amount_required</fullName>
        <active>true</active>
        <description>Order amount required when order is filled</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( Order_Number__c )),  ISBLANK(  Order_Amount__c ) )</errorConditionFormula>
        <errorDisplayField>Order_Amount__c</errorDisplayField>
        <errorMessage>Order amount required when order number is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_fulfilled_only_for_closed_won</fullName>
        <active>true</active>
        <description>Order fulfilled can be selected only if the opportunity is in Closed won status</description>
        <errorConditionFormula>AND( Project_closed__c  = TRUE, ISBLANK(Order_Number__c))</errorConditionFormula>
        <errorDisplayField>Project_closed__c</errorDisplayField>
        <errorMessage>Order can&apos;t be fulfilled if order number is empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_required_for_Closed_won_status</fullName>
        <active>true</active>
        <description>Order number is required when an opportunity has status closed won</description>
        <errorConditionFormula>AND(  ISPICKVAL(StageName , &quot;Closed Won&quot;) ,  ISBLANK( Order_Number__c )  )</errorConditionFormula>
        <errorDisplayField>Order_Number__c</errorDisplayField>
        <errorMessage>Order number required for &quot;Closed Won&quot; opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Orderdate_required_with_order</fullName>
        <active>true</active>
        <description>Order date is required when order is filled</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Order_Number__c )),  ISBLANK( Order_Date__c )  )</errorConditionFormula>
        <errorDisplayField>Order_Date__c</errorDisplayField>
        <errorMessage>Order date required when order number is filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Platform_field_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(TEXT(Platform__c )),
NOT(
OR(
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISPICKVAL(StageName, &apos;Closed Lost&apos;),
ISPICKVAL(StageName, &apos;Budget&apos;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Platform__c</errorDisplayField>
        <errorMessage>Please select a value for the &apos;Platform&apos; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_close_date_future</fullName>
        <active>true</active>
        <description>Fulfillment date cannot be in the future</description>
        <errorConditionFormula>NOT( ISNULL( Project_closed_date__c ) )&amp;&amp; Project_closed_date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Project_closed_date__c</errorDisplayField>
        <errorMessage>Fulfillment date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_close_date_required</fullName>
        <active>true</active>
        <description>Fulfillment date required when order fulfilled flag is on</description>
        <errorConditionFormula>Project_closed__c  = TRUE  &amp;&amp;  ISNULL(Project_closed_date__c)</errorConditionFormula>
        <errorDisplayField>Project_closed_date__c</errorDisplayField>
        <errorMessage>Fulfillment date is required when the order is fulfilled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_close_required</fullName>
        <active>true</active>
        <description>Order fulfilled flag required when the fulfillment date is filled</description>
        <errorConditionFormula>NOT(ISNULL( Project_closed_date__c ) ) &amp;&amp;  Project_closed__c  = FALSE</errorConditionFormula>
        <errorDisplayField>Project_closed__c</errorDisplayField>
        <errorMessage>Order fulfilled must be selected when you insert a fulfillment date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quality_manager_mandatory</fullName>
        <active>true</active>
        <description>Quality manager must be filled if flag quality review is active</description>
        <errorConditionFormula>AND( Quality_review__c = TRUE, ISBLANK(  PM_Quality_manager__c  )  )</errorConditionFormula>
        <errorDisplayField>PM_Quality_manager__c</errorDisplayField>
        <errorMessage>Quality manager must be filled if quality review flag is active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quality_status_mandatory</fullName>
        <active>false</active>
        <description>Quality review status must be filled if flag quality review is active</description>
        <errorConditionFormula>AND( Quality_review__c = TRUE, ISBLANK(   TEXT(Quality_review_status__c ))  )</errorConditionFormula>
        <errorDisplayField>Quality_review_status__c</errorDisplayField>
        <errorMessage>Quality review status must be filled if quality review flag is active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quality_status_mandatory_since_proposal</fullName>
        <active>true</active>
        <description>Quality review status must be filled if opportunity status is equal or greater than proposal</description>
        <errorConditionFormula>AND( Probability &gt;= 0.50, ISBLANK(   TEXT(Quality_review_status__c ))  )</errorConditionFormula>
        <errorDisplayField>Quality_review_status__c</errorDisplayField>
        <errorMessage>Quality review status must be filled if opportunity stage is equal or greater than Proposal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_close_date</fullName>
        <active>false</active>
        <description>La data di inizio lavori non può essere inferiore alla data di chiusura opportunità (solo &gt;=)</description>
        <errorConditionFormula>Start_date__c  &lt;  CloseDate</errorConditionFormula>
        <errorDisplayField>Start_date__c</errorDisplayField>
        <errorMessage>The start date must be greater than or equal to the close date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tr_project_Id_required_with_order</fullName>
        <active>true</active>
        <description>Tr project ID is required when order is filled</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Order_Number__c )),  ISBLANK( TR_Project_ID__c )  )</errorConditionFormula>
        <errorDisplayField>TR_Project_ID__c</errorDisplayField>
        <errorMessage>TR project ID required when order number is filled</errorMessage>
    </validationRules>
</CustomObject>